# callex-prod

./: .gitignore  API_DOCUMENTATION.md  CALLEX_API_DOCUMENTATION_APRIL_10.md  CALLEX_API_DOCUMENTATION_APRIL_8.md  CALLEX_MASTER_API_REFERENCE.md  CALLEX_SERVER_RESTART_AND_TEST_GUIDE.md  Callex-10th.md  README.md  ecosystem.config.js  requirements.txt  test_ws_sink.py
app/: main.py  tts_server.py
app/audio/: callex_stt.py  gating.py  sst_model_2_streaming.py  whisper_streaming.py
app/core/: agent_loader.py  database.py
app/managers/: scripts.py
app/services/: analytics.py
callex-gpu-tts/: requirements.txt  setup.sh  tts_server.py
callex_tts_rnd/: Dockerfile  Makefile  README.md  conftest.py  dataset.py  docker-compose.yml  model.py  pyproject.toml  tokenizer.py  train.py
callex_tts_rnd/configs/: prometheus.yml
callex_tts_rnd/configs/inference/: server.yaml
callex_tts_rnd/configs/model/: base.yaml  hindi_production.yaml
callex_tts_rnd/configs/training/: distributed.yaml
callex_tts_rnd/docs/: ARCHITECTURE.md
callex_tts_rnd/modules/: hindi_nlp.py
callex_tts_rnd/scripts/: benchmark.py
callex_tts_rnd/src/callex_tts/: __init__.py  version.py
callex_tts_rnd/src/callex_tts/audio/: __init__.py  effects.py  features.py  prosody.py  vocoder_postnet.py
callex_tts_rnd/src/callex_tts/data/: __init__.py  augmentation.py  dataset.py  sampler.py
callex_tts_rnd/src/callex_tts/serving/: __init__.py  metrics.py  server.py
callex_tts_rnd/src/callex_tts/text/: __init__.py  normalizer.py  phonemizer.py  ssml.py  tokenizer.py
callex_tts_rnd/src/callex_tts/training/: __init__.py  checkpoint.py  losses.py  scheduler.py  trainer.py
callex_tts_rnd/tests/: test_audio_pipeline.py  test_models.py  test_normalizer.py  test_ssml.py  test_tokenizer.py
enterprise/backend/: package-lock.json
enterprise/backend/src/: _rctx.js  firebase.js  index.js
enterprise/backend/src/routes/: agents.js  analytics.js  external.js  simulation-stream.js  simulation.js
enterprise/backend/src/ws/: _wst.js
enterprise/frontend/public/: stt-worklet.js
scratch/: hide_logs.py  refactor_labels.py
scripts/voices/: find_indian_voices.py  find_indian_voices2.py  generate_previews.py  generate_previews_indian.py  print_voices.py
