[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "callex-tts"
dynamic = ["version"]
description = "Callex Proprietary GPU-Accelerated Text-to-Speech Synthesis Engine"
readme = "README.md"
license = {text = "Proprietary — Callex / Lakhu Teleservices Pvt. Ltd."}
requires-python = ">=3.10"
authors = [
    {name = "Callex AI Research", email = "research@callex.ai"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    # ── Core ML ──
    "torch>=2.1.0",
    "torchaudio>=2.1.0",
    "numpy>=1.24.0,<2.0.0",

    # ── Audio DSP ──
    "librosa>=0.10.1",
    "soundfile>=0.12.1",
    "scipy>=1.11.0",
    "pyloudnorm>=0.1.1",

    # ── Hindi NLP ──
    "indic-nlp-library>=0.92",
    "epitran>=1.24",
    "indic-transliteration>=2.3.0",
    "num2words>=0.5.13",

    # ── Inference Server ──
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "prometheus-client>=0.19.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # ── Configuration ──
    "omegaconf>=2.3.0",
    "pyyaml>=6.0",

    # ── Logging & Observability ──
    "structlog>=23.2.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
train = [
    "wandb>=0.16.0",
    "tensorboard>=2.15.0",
    "deepspeed>=0.12.0",
    "einops>=0.7.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.6.0",
]
export = [
    "onnx>=1.15.0",
    "onnxruntime-gpu>=1.16.0",
]

[project.scripts]
callex-tts-serve = "callex_tts.serving.server:main"
callex-tts-train = "callex_tts.training.trainer:main"
callex-tts-benchmark = "scripts.benchmark:main"

[tool.setuptools.dynamic]
version = {attr = "callex_tts.version.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
